<resources>
    <string name="app_name">SIGA</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="marca">Marca</string>
    <string name="año">Año</string>
    <string name="modelo">Modelo</string>
    <string name="pendiente">Espera de recepcion</string>
    <string name="revisando">Recibido</string>
    <string name="working">En reparacion</string>
    <string name="done">Terminado</string>
    <string name="name">Nombre Completo</string>
    <string name="registrarse">Registrarse</string>
    <string name="hola_name">Hola %1$s</string>
    <string name="cars">Mis Vehiculos</string>
    <string name="email">Email</string>
    <string name="address">Direccion</string>
    <string name="tipo">Tipo</string>
    <string name="chasis">Chasis</string>
    <string name="engine">Engine</string>
    <string name="add_vehicle">Agregar Vehiculo</string>
    <string name="talleres">Talleres</string>
    <string name="logout">Logout</string>
    <string name="no_tiene_autos_cargados">No tiene autos cargados</string>
    <string name="error_reguster">Incompleto</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="error_login">Usuario y/o Contraseña invalida</string>
    <string name="detail_turn">Detalle del vehiculo</string>
    <string name="reservar">Reservar</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="kilometros">Kilometros</string>
    <string name="necesidad">Necesidad</string>
    <string name="taller">Taller</string>
    <string name="horario">Horario</string>
    <string name="detalles_adicionales">Detalles adicionales</string>
    <string name="dia">Cargar Día</string>
    <string name="no_tiene_talleres_cerca">No tiene talleres cerca</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="search_garage">Buscar Taller</string>
    <string name="km">Km</string>
    <string name="select_garage">Seleccionar Garage</string>
    <string name="agendar_turno">Agendar turno</string>
    <string name="volver_al_inicio">Volver al inicio</string>

    <string name="lottie_success">check_animation.json</string>
    <string name="lottie_error">error_animation.json</string>
    <string name="create_turn_title">Turno creado</string>
    <string name="create_turn_desc">Por favor si llega a cancelar antes de las 48hs</string>
    <string name="gohome">Ir al Inicio</string>
    <string name="entregado">Entregado</string>
    <string name="mis_servicios">Mis Servicios</string>
    <string name="not_services">No tiene servicios agendados</string>
    <string name="serviecs_finish">No tiene servicios realizados</string>
    <string name="mi_historial">Mi Historial</string>
    <string name="evaluar">Evaluar</string>
    <string name="patente">Patente</string>
    <string name="type">Tipo</string>
    <string name="color">Color</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso</string>
    <string name="fecha_de_egress">Fecha de Salida</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="empty">-</string>
    <string name="chatea_con_nosotros">Chatea con nosotros</string>
    <string name="asunto">Asunto</string>
    <string name="capacidad">Capacidad de vehiculos </string>

    <string-array name="brand_array">
        <item>Marca</item>
        <item>Volkswagen</item>
        <item>Renault</item>
        <item>Peugeot</item>
        <item>Ford</item>
        <item>Fiat</item>
    </string-array>

    <string-array name="type_array">
        <item>Tipo</item>
        <item>Auto</item>
        <item>Moto</item>
    </string-array>

    <string-array name="categories_array">
        <item>Categoria</item>
        <item>Mecanica general</item>
        <item>Mecanica ligera</item>
        <item>Chapa y pintura</item>
        <item>Cristales</item>
        <item>Electricista</item>
        <item>Cerrajeria</item>
        <item>Gomeria</item>
    </string-array>
</resources>
