<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_register_name_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/name"
        android:textColorHint="@color/grey_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_letters"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_register_email_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:textColorHint="@color/grey_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_register_name_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_letters"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_register_user_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/usuario"
        android:textColorHint="@color/grey_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_register_email_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_letters"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_register_passwd_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/contrasena"
        android:textColorHint="@color/grey_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_register_user_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_register_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_letters"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_register_address_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/address"
        android:textColorHint="@color/grey_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_register_passwd_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_letters"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/fr_register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/oval_button"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
