<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/fr_cr_turn_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/detail_turn"
            android:textColor="@color/black_letters"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fr_cr_turn_vehiculos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="24dp"
            android:text="@string/vehiculos"
            android:textColor="@color/black_letters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_cr_turn_title" />

        <Spinner
            android:id="@+id/fr_cr_turn_vehiculos_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black_letters"
            android:textSize="@dimen/input_size"
            app:layout_constraintBottom_toBottomOf="@id/fr_cr_turn_vehiculos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fr_cr_turn_vehiculos"
            app:layout_constraintTop_toTopOf="@+id/fr_cr_turn_vehiculos" />

        <TextView
            android:id="@+id/fr_cr_turn_km"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="24dp"
            android:text="@string/kilometros"
            android:textColor="@color/black_letters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_cr_turn_vehiculos" />

        <EditText
            android:id="@+id/fr_cr_turn_km_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="60dp"
            android:inputType="number"
            android:textColor="@color/black_letters"
            android:textSize="@dimen/input_size"
            app:layout_constraintBottom_toBottomOf="@id/fr_cr_turn_km"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fr_cr_turn_km"
            app:layout_constraintTop_toTopOf="@+id/fr_cr_turn_km" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/km"
            android:textColor="@color/black_letters"
            android:textSize="@dimen/input_size"
            app:layout_constraintBottom_toBottomOf="@id/fr_cr_turn_km"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fr_cr_turn_km" />

        <TextView
            android:id="@+id/fr_cr_turn_necesidad"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="24dp"
            android:text="@string/necesidad"
            android:textColor="@color/black_letters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_cr_turn_km" />

        <Spinner
            android:id="@+id/fr_cr_turn_necesidad_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="16dp"
            android:entries="@array/categories_array"
            android:textColor="@color/black_letters"
            android:textSize="@dimen/input_size"
            app:layout_constraintBottom_toBottomOf="@id/fr_cr_turn_necesidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fr_cr_turn_necesidad"
            app:layout_constraintTop_toTopOf="@+id/fr_cr_turn_necesidad" />


        <TextView
            android:id="@+id/fr_cr_turn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/detalles_adicionales"
            android:textColor="@color/black_letters"
            android:textSize="@dimen/input_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_cr_turn_necesidad" />

        <EditText
            android:id="@+id/fr_cr_turn_detail_input"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_cr_turn_detail" />

        <TextView
            android:id="@+id/fr_cr_turn_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/oval_button"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/search_garage"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.seminario2.mecanicaapp.view.TabView
        android:id="@+id/fr_cr_turn_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabActive="1" />
</LinearLayout>
